tests/fixtures/invalid/pow_int_bytes_bool.py
# Cannot call pow() with Int, Bytes, Bool
x = pow(1, b"hello", True)
